--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -81,16 +81,26 @@ header .container {
   height: 100%;
 }
 
-.header__logo {
+.header__left {
   display: flex;
   align-items: center;
   gap: 25px;
   padding-left: 10px;
 }
-.header__logo img {
+
+.burger {
+  display: none;
+}
+
+.header__logo {
   height: 40px;
   width: auto;
   aspect-ratio: 106/40;
+}
+.header__logo img {
+  width: 100%;
+  height: 100%;
+  display: block;
 }
 
 .icon {
@@ -158,6 +168,9 @@ header .container {
   flex-direction: column;
   z-index: 9;
   background: rgb(32, 9, 34);
+}
+.sidebar .header__search {
+  display: none;
 }
 
 .sidebar__menu {
@@ -768,4 +781,206 @@ header .container {
   color: rgb(136, 123, 143);
   line-height: 1.4;
   font-size: 12px;
+}
+
+@media (max-width: 1280px), (orientation: portrait) {
+  header {
+    z-index: 199;
+  }
+  .header__left {
+    gap: 15px;
+    padding-left: 0;
+  }
+  .header__left svg-icon-sprite:nth-child(1) {
+    display: block;
+  }
+  .header__left svg-icon-sprite:nth-child(2) {
+    display: none;
+  }
+  .header__logo {
+    aspect-ratio: 37/40;
+  }
+  .burger {
+    display: block;
+    width: 32px;
+    height: 32px;
+  }
+  .burger svg-icon-sprite {
+    width: 100%;
+    height: 100%;
+  }
+  .burger.active svg-icon-sprite:nth-child(1) {
+    display: none;
+  }
+  .burger.active svg-icon-sprite:nth-child(2) {
+    display: block;
+  }
+  .sidebar {
+    width: 300px;
+    z-index: 199;
+    transition-duration: 0.3s;
+    left: -300px;
+  }
+  .sidebar .header__search {
+    display: flex;
+    min-width: auto;
+    margin-bottom: 12px;
+    font-size: 12px;
+    min-height: 44px;
+  }
+  .sidebar.active {
+    left: 0;
+  }
+  .header .header__search {
+    display: none;
+  }
+  .sidebar__footer {
+    margin-top: 50px;
+  }
+  .main {
+    padding-left: 0;
+    position: relative;
+  }
+  .main::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(32, 9, 34, 0.7);
+    opacity: 0;
+    transition-duration: 0.3s;
+    z-index: 99;
+    pointer-events: none;
+  }
+  .main.bg-active::after {
+    opacity: 1;
+  }
+}
+@media (orientation: portrait) {
+  .sidebar__footer {
+    margin-top: auto;
+  }
+}
+@media (max-width: 1024px) {
+  .footer__menu {
+    gap: 24px;
+  }
+  .footer__column,
+  .footer__menu__item,
+  .footer__menu__item ul {
+    gap: 15px;
+  }
+  .footer__menu__item:nth-child(2) {
+    margin-top: 40px;
+  }
+  .top__banner__content {
+    width: 50%;
+  }
+}
+@media (max-width: 767px) {
+  .sidebar__footer {
+    margin-top: 50px;
+  }
+  .sidebar {
+    width: 100%;
+    left: -100%;
+  }
+  .header__btn {
+    height: 36px;
+    font-size: 12px;
+  }
+  .container {
+    width: calc(100% - 24px);
+  }
+  .top {
+    padding: 12px 0 0;
+  }
+  .top__banner {
+    aspect-ratio: 355/307;
+    height: auto;
+    padding: 28px 10px;
+    display: flex;
+    align-items: flex-end;
+    overflow: hidden;
+  }
+  .top__banner__content {
+    width: 100%;
+    height: auto;
+  }
+  .top__banner__content p:nth-child(1) {
+    font-size: 18px;
+  }
+  .top__banner__content p:nth-child(2) {
+    font-size: 24px;
+  }
+  .top__banner__img img:nth-child(1) {
+    width: 80px;
+    top: 10px;
+    right: 45%;
+  }
+  .top__banner__img img:nth-child(2) {
+    top: 0;
+    right: 5%;
+    width: 126px;
+  }
+  .top__banner__content a {
+    margin-top: 15px;
+  }
+  .top__menu__row {
+    padding: 10px 0;
+  }
+  .cards__arrows {
+    display: none;
+  }
+  .cards__list {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+  }
+  .banner__content__img {
+    display: none;
+  }
+  .banner {
+    padding: 20px;
+  }
+  .banner--wrap {
+    padding-top: 35px;
+  }
+  .content--wrap {
+    padding: 35px 0;
+  }
+  .cards__item:last-child {
+    display: none;
+  }
+  .content__item {
+    font-size: 16px;
+  }
+  .content__item h2,
+  .content__item h3 {
+    font-size: 30px;
+    line-height: 1.2;
+  }
+  .content__item ol {
+    padding-left: 30px;
+  }
+  .content__item ul {
+    padding-left: 30px;
+  }
+  .footer__menu {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 34px 24px;
+  }
+  .footer {
+    padding: 30px 10px;
+  }
+  .footer__column:last-child {
+    display: none;
+  }
+  .top--menu {
+    top: 63px;
+  }
+  body.hidden {
+    max-height: none;
+  }
 }/*# sourceMappingURL=styles.css.map */
