--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -557,20 +557,49 @@ header .container {
   background: linear-gradient(180deg, rgba(91, 43, 95, 0.9) 0%, #401e46 100%), url("/assets/images/triangle-pattern.webp");
   background-size: cover, auto 42%;
   background-position-x: 5%;
-  height: 182px;
+  height: 270px;
   display: flex;
   align-items: center;
-  padding: 20px 34px;
+  padding: 20px 64px;
   position: relative;
+}
+@media (max-width: 1400px) {
+  .banner {
+    height: 200px;
+    padding: 20px 34px;
+  }
+}
+@media (max-width: 1024px) {
+  .banner {
+    height: 182px;
+  }
 }
 
 .banner__content {
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  font-size: 20px;
+  gap: 30px;
+  font-size: 32px;
   line-height: 1.2;
   font-weight: 700;
+}
+@media (max-width: 1900px) {
+  .banner__content {
+    font-size: 24px;
+    gap: 24px;
+  }
+}
+@media (max-width: 1024px) {
+  .banner__content {
+    font-size: 20px;
+    gap: 18px;
+  }
+}
+@media (max-width: 1900px) {
+  .banner__content p {
+    display: flex;
+    flex-direction: column;
+  }
 }
 .banner__content p span:nth-child(2) {
   background: linear-gradient(180deg, rgb(252, 243, 21) 0%, rgb(251, 156, 12) 100%);
@@ -583,15 +612,28 @@ header .container {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 44px;
-  width: 220px;
+  height: 74px;
+  width: 290px;
   font-weight: 700;
-  font-size: 16px;
+  font-size: 28px;
   text-transform: uppercase;
   text-align: center;
   border-radius: 2px;
   transition-duration: 0.2s;
   color: rgb(255, 255, 255);
+}
+@media (max-width: 1900px) {
+  .banner__content a {
+    height: 58px;
+    width: 220px;
+    font-size: 18px;
+  }
+}
+@media (max-width: 1024px) {
+  .banner__content a {
+    height: 44px;
+    font-size: 16px;
+  }
 }
 .banner__content a:hover {
   background: rgb(105, 226, 0);
@@ -599,9 +641,30 @@ header .container {
 
 .banner__content__img {
   position: absolute;
-  right: 20px;
-  top: -30px;
-  width: 566px;
+  inset-inline-end: 83px;
+  top: -51px;
+  width: 964px;
+}
+@media (max-width: 1900px) {
+  .banner__content__img {
+    inset-inline-end: 7px;
+    top: -47px;
+    width: 850px;
+  }
+}
+@media (max-width: 1400px) {
+  .banner__content__img {
+    inset-inline-end: 0;
+    top: -40px;
+    width: 700px;
+  }
+}
+@media (max-width: 1024px) {
+  .banner__content__img {
+    top: -23px;
+    inset-inline-end: -42px;
+    width: 493px;
+  }
 }
 
 .content--wrap {
