--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -694,6 +694,7 @@ header {
 	font-weight: 400;
 	font-size: 18px;
 	line-height: 1.6;
+	h1,
 	h2,
 	h3 {
 		font-size: 33px;
@@ -1063,6 +1064,7 @@ header {
 	.content__item {
 		font-size: 16px;
 	}
+	.content__item h1,
 	.content__item h2,
 	.content__item h3 {
 		font-size: 30px;
